# abseil-cpp-kos

./: CHANGELOG.md  CMakeLists.txt  KasperskyOS-CE-adaptation.patch  README.md
